fixed the image in the about section that is overflowing when the viewport reduce

--- a/app/components/about/about.module.css
+++ b/app/components/about/about.module.css
@@ -9,7 +9,8 @@
 .container img {
   width: 100%;
   height: 100%;
-  max-height: 100% !important;
+  max-height: 600px !important;
+
   object-fit: cover;
 }
 
